--- a/index.html
+++ b/index.html
@@ -39,31 +39,30 @@
 				<nav class="link-effect-2" id="link-effect-2">
 					<ul class="nav navbar-nav">
 						<li><a href="index.html"><span data-hover="Home">Home</span></a></li>
-						<li><a href="courses.html"><span data-hover="Courses">Courses</span></a></li>
-						<li><a href="services.html"><span data-hover="Services">Services</span></a></li>s
-						<li><a href="mail.html"><span data-hover="Mail Us">Mail Us</span></a></li>
+						<li><a href="courses.html"><span data-hover="Courses">Experiment</span></a></li>
+						<li><a href="services.html"><span data-hover="Services">Explore</span></a></li>
+						<li><a href="mail.html"><span data-hover="Mail Us">Contact Us</span></a></li>
 					</ul>
 				</nav>
 			</div>
 			<div class="w3_agile_phone">
-				<p><i class="fa fa-phone" aria-hidden="true"></i>+91xxxxxxxxxx</p>
+				<p><i class="fa fa-phone" aria-hidden="true"></i>+919666497116</p>
 			</div>
 		</nav>
 		<div class="container">
 			<div class="agile_banner_info">
 				<div class="agile_banner_info1">
-					<h3>Education at its <span>best</span></h3>
+					<h3>Learning <span>beyond the classroom</span></h3>
 					<div id="typed-strings" class="agileits_w3layouts_strings">
-						<p>better <i>education</i> for better world</p>
-						<p><i>education</i> is a journey not a race</p>
+						<p>We think <i>Out of the Box</i></p>
+						<p>We work <i>Out of the Box</i></p>
 						<p>character is a wish for a perfect <i>education</i></p>
 					</div>
 					<span id="typed" style="white-space:pre;"></span>
 				</div>
 			</div>
 			<div class="banner_agile_para">
-				<p>Nulla viverra pharetra sem, eget pulvinar neque pharetra ac. 
-						Vestibulum faucibus metus eu auctor vehicula.</p>
+				<p><b>VISION:</b><br/> OOB Communities is your archway to world-class opportunities. Your very own space to explore and evolve into the best version on yourself, under the aegis of the very best in the business; All in the comfort of your neighbourhood. </p>
 			</div>
 			<div class="w3_agile_social_icons">
 				<ul class="agileinfo_social_icons">
@@ -91,11 +90,11 @@
 				</div>
 				<div class="w3ls_banner_bottom_right1">
 					<h2>the whole purpose of <span>education</span> is to turn mirrors into windows</h2>
-					<p>Pellentesque convallis diam consequat magna vulputate malesuada. 
-						Cras a ornare elit. Nulla viverra pharetra sem, eget pulvinar neque pharetra ac.</p>
+					<p>In every individual, there exists a powerhouse of talent. We at OOB aspire to enable every future trailblazer to explore beyond the four walls and unlock the potential that already lies within him.
+</p>
 					<div class="w3l_more">
-						<a href="#" class="button button--nina" data-text="Learn more" data-toggle="modal" data-target="#myModal">
-							<span>L</span><span>e</span><span>a</span><span>n</span> <span>m</span><span>o</span><span>r</span><span>e</span>
+						<a href="#" class="button button--nina" data-text="Mission" data-toggle="modal" data-target="#myModal">
+							<span>M</span><span>i</span><span>s</span><span>s</span><span>i</span><span>o</span><span>n</span>
 						</a>
 					</div>
 				</div>
@@ -139,14 +138,9 @@
 				<section>
 					<div class="modal-body">
 						<img src="images/10.jpg" alt=" " class="img-responsive" />
-						<p>Ut enim ad minima veniam, quis nostrum 
-							exercitationem ullam corporis suscipit laboriosam, 
-							nisi ut aliquid ex ea commodi consequatur? Quis autem 
-							vel eum iure reprehenderit qui in ea voluptate velit 
-							esse quam nihil molestiae consequatur, vel illum qui 
-							dolorem eum fugiat quo voluptas nulla pariatur.
-							<i>" Quis autem vel eum iure reprehenderit qui in ea voluptate velit 
-								esse quam nihil molestiae consequatur.</i></p>
+						<p>OOB communities aims to provide a safe haven for the overall development of an individual alongside equipping him with the best tools to carve out his niche. Our wide network of experts, educators and mentors provide ample inspiration to kick-start a journey of learning and self-discovery. 
+							As Robert John Meehan aptly put it,<i> “Developing a desire to learn is the kindling point of all classroom achievement.”</i>Join us to not only be industry-ready but life-ready.
+</p>
 					</div>
 				</section>
 			</div>
@@ -167,8 +161,7 @@
 			</div>
 			<div class="col-md-6 w3layouts_register_left">
 				<h3><span>Register</span> now</h3>
-				<p>Aliquam sit amet sapien felis. Proin vel dolor sed risus maximus gravida. 
-					Ut suscipit orci sem, eget lobortis sem dictum eu. Etiam congue ex sed volutpat fringilla.</p>
+				<p>To be a part of a journey of learning, exploration, and most importantly fun!</p>
 			</div>
 			<div class="clearfix"> </div>
 		</div>
@@ -258,8 +251,7 @@
 				</div>
 				<div class="w3_agile_team_grid_right">
 					<h3>What Our <span>Students</span> Says</h3>
-					<p>Aliquam sit amet sapien felis. Proin vel dolor sed risus maximus gravida. 
-						Ut suscipit orci sem, eget lobortis sem dictum eu. Etiam congue ex sed volutpat fringilla.</p>
+					<p>Our tales of success</p>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
@@ -315,24 +307,23 @@
 				<div class="w3agile_footer_grids">
 					<div class="col-md-4 w3agile_footer_grid">
 						<h3>About Us</h3>
-						<p>Duis aute irure dolor in reprehenderit in voluptate velit esse.<span>Excepteur sint occaecat cupidatat 
-							non proident, sunt in culpa qui officia deserunt mollit.</span></p>
+						<p> OOB Communities is a network of learning centres which cater to every need of an individual’s education, both academic and practical. 
+ <span>We deliver on our promise of providing the best of instruction, innovation and influence.</span></p>
 					</div>
 					<div class="col-md-4 w3agile_footer_grid">
 						<h3>Contact Info</h3>
 						<ul>
-							<li><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>1234k Avenue, 4th block, <span>New York City.</span></li>
-							<li><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><a href="mailto:info@example.com">info@example.com</a></li>
-							<li><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i>+1234 567 567</li>
+							<li><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>Greenfield colony, Dairy Farm road, <span>Trimulgherry</span></li>
+							<li><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><a href="mailto:info@example.com">hello@oobcommunities.com</a></li>
+							<li><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i>+919666497116</li>
 						</ul>
 					</div>
 					<div class="col-md-4 w3agile_footer_grid w3agile_footer_grid1">
 						<h3>Navigation</h3>
 						<ul>
-							<li><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span><a href="courses.html">Courses</a></li>
-							<li><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span><a href="services.html">Services</a></li>
-							<li><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span><a href="icons.html">Web Icons</a></li>
-							<li><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span><a href="mail.html">Mail Us</a></li>
+							<li><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span><a href="courses.html">Experiment</a></li>
+							<li><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span><a href="services.html">Explore</a></li>
+							<li><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span><a href="mail.html">Contact Us</a></li>
 						</ul>
 					</div>
 					<div class="clearfix"> </div>
@@ -340,7 +331,7 @@
 			</div>
 			<div class="w3_agileits_copy_right_social">
 				<div class="col-md-6 agileits_w3layouts_copy_right">
-					<p>&copy; 2018
+					<p>&copy; FreeFlo 2018</p>
 				</div>
 				<div class="col-md-6 w3_agile_copy_right">
 					<ul class="agileinfo_social_icons">
