--- a/courses.html
+++ b/courses.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Edunet</title>
+<title>Oob Communities</title>
 <!-- custom-theme -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -13,11 +13,36 @@
 <!-- js -->
 <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
 <!-- //js -->
+
+<link rel="stylesheet" href="css/flexslider.css" type="text/css" media="screen" property="" />
+<!-- gallery -->
+<link href="css/lsb.css" rel="stylesheet" type="text/css">
 <!-- font-awesome-icons -->
 <link href="css/font-awesome.css" rel="stylesheet"> 
 <!-- //font-awesome-icons -->
-<link href="//fonts.googleapis.com/css?family=Prompt:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&amp;subset=latin-ext,thai,vietnamese" rel="stylesheet"></head>
-	
+<link href="//fonts.googleapis.com/css?family=Prompt:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&amp;subset=latin-ext,thai,vietnamese" rel="stylesheet">
+
+<style>
+.regbtn {
+    background-color: #5398CB;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius:9px;
+}
+
+.regpara {
+    color:#63C8CA;
+}
+
+</style>
+</head>
 <body>
 <!-- banner -->
 	<div class="banner1">
@@ -29,42 +54,31 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<h1><a class="navbar-brand" href="index.html"><span>E</span>dunet</a></h1>
+				<h1><a class="navbar-brand" href="index.html"><img src="images/logo.png" width="150" height="100"></a></h1>
 			</div>
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
-				<nav class="link-effect-2" id="link-effect-2">
+				<nav>
 					<ul class="nav navbar-nav">
 						<li><a href="index.html"><span data-hover="Home">Home</span></a></li>
-						<li><a href="courses.html"><span data-hover="Courses">Courses</span></a></li>
-						<li><a href="services.html"><span data-hover="Services">Services</span></a></li>s
-						<li><a href="mail.html"><span data-hover="Mail Us">Mail Us</span></a></li>
+						<li><a href="courses.html"><span data-hover="Courses">Experiment</span></a></li>
+						<li><a href="services.html"><span data-hover="Services">Explore</span></a></li>
+						<li><a href="mail.html"><span data-hover="Mail Us">Contact Us</span></a></li>
 					</ul>
 				</nav>
 			</div>
 			<div class="w3_agile_phone">
-				<p><i class="fa fa-phone" aria-hidden="true"></i> +123 234 233</p>
+				<p><i class="fa fa-phone" aria-hidden="true"></i>+918790752018</p>
 			</div>
 		</nav>
-		<div class="wthree_banner1_info">
-			<div class="container">
-				<h3><span>C</span>ourses</h3>
-			</div>
-		</div>
 	</div>
 <!-- //banner -->	
 <!-- courses -->
 	<div class="courses">
 		<div class="container"> 
 			<div class="w3_agile_team_grid">
-				<div class="w3_agile_team_grid_left">
-					<p>01</p>
-					<span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span>
-				</div>
 				<div class="w3_agile_team_grid_right">
-					<h3>Courses <span>Offered</span></h3>
-					<p>Aliquam sit amet sapien felis. Proin vel dolor sed risus maximus gravida. 
-						Ut suscipit orci sem, eget lobortis sem dictum eu. Etiam congue ex sed volutpat fringilla.</p>
+					<h3>Upcoming <span style="color:#5398CB;">Workshops</span></h3>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
@@ -72,19 +86,19 @@
 				<div class="col-md-6 w3ls_banner_bottom_left w3ls_courses_left">
 					<div class="w3ls_courses_left_grids">
 						<div class="w3ls_courses_left_grid">
-							<h3><i class="fa fa-pencil-square-o" aria-hidden="true"></i>pulvinar neque pharetra eget</h3>
-							<p>Pellentesque convallis diam consequat magna vulputate malesuada. 
-								Cras a ornare elit. Nulla viverra pharetra sem, eget pulvinar neque pharetra ac.</p>
-						</div>
-						<div class="w3ls_courses_left_grid">
-							<h3><i class="fa fa-pencil-square-o" aria-hidden="true"></i>consequat magna vulputate</h3>
-							<p>Pellentesque convallis diam consequat magna vulputate malesuada. 
-								Cras a ornare elit. Nulla viverra pharetra sem, eget pulvinar neque pharetra ac.</p>
-						</div>
-						<div class="w3ls_courses_left_grid">
-							<h3><i class="fa fa-pencil-square-o" aria-hidden="true"></i>convallis diam consequat magna</h3>
-							<p>Pellentesque convallis diam consequat magna vulputate malesuada. 
-								Cras a ornare elit. Nulla viverra pharetra sem, eget pulvinar neque pharetra ac.</p>
+							<h2><span style="color:#1B8EAC;">Dance Can Talk</span></h3>
+							<p>From classroom presentations and boardroom meetings, to your best friend’s wedding: Speaking out to a crowd is a must-have skill!<br><br> 
+
+But could you ever think of connecting dance and speaking at any level? 
+If not, join us for a comprehensive masterclass session with some of the most impactful speakers of our generation and watch yourself transform through the evening. You will learn to expertly articulate your thoughts and deliver earth-shattering speeches that could make your Grandma cry!<br><br>
+ 
+Hurry up! Grab a seat now!  Look for the details on the poster and contact us ASAP.<br><br>
+
+<b style="color:#1B8EAC;">Meet and Greet</b>- Be friends with our mentor and be an unerasable part of her journey.<br><br>
+
+<b style="color:#1B8EAC;">Be the you, you imagined</b>- The day will bring you a lot of surprise activities with a bang, as you get to show off your brand-new oratory game.
+<br><br>
+<b style="color:#1B8EAC;">Dance face-off</b>- Ever been in a cypher? Come and experience this crazy mashup of dancing as you speak! Literally let your audience groove to your words, be immersed in the tune of you as you deliver the message your heart.</p>
 						</div>
 					</div>
 				</div>
@@ -97,7 +111,7 @@
 	</div>
 <!-- //courses -->
 <!-- stats -->
-	<div class="stats">
+<!-----	<div class="stats">
 		<div class="col-md-3 w3layouts_stats_left w3_counter_grid">
 			<p class="counter">1,546</p>
 			<h3>Staffs</h3>
@@ -115,17 +129,17 @@
 			<h3>Projects</h3>
 		</div>
 		<div class="clearfix"> </div>
-	</div>
+	</div>--->
 <!-- //stats -->
 <!-- stats -->
-	<script src="js/jquery.waypoints.min.js"></script>
+	<!--<script src="js/jquery.waypoints.min.js"></script>
 	<script src="js/jquery.countup.js"></script>
 		<script>
 			$('.counter').countUp();
-		</script>
+		</script>-->
 <!-- //stats -->
 <!-- stats-bottom-banner -->
-	<div class="stats-bottom-banner">
+	<!--<div class="stats-bottom-banner">
 		<div class="container">
 			<h3>the whole purpose of <span>education</span> is to turn mirrors into windows</h3>
 			<p>Nunc in dolor hendrerit, pellentesque mi ac, accumsan nunc. Vestibulum sapien lacus, 
@@ -137,7 +151,7 @@
 				</a>
 			</div>
 		</div>
-	</div>
+	</div>---->
 <!-- //stats-bottom-banner -->	
 <!-- bootstrap-pop-up -->
 	<div class="modal video-modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModal">
@@ -167,14 +181,8 @@
 	<div class="team">
 		<div class="container"> 
 			<div class="w3_agile_team_grid">
-				<div class="w3_agile_team_grid_left">
-					<p>03</p>
-					<span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span>
-				</div>
 				<div class="w3_agile_team_grid_right">
-					<h3>Our <span>Skills</span></h3>
-					<p>Aliquam sit amet sapien felis. Proin vel dolor sed risus maximus gravida. 
-						Ut suscipit orci sem, eget lobortis sem dictum eu. Etiam congue ex sed volutpat fringilla.</p>
+					<h3>Meet Your <span style="color:#5398CB">Mentor</span></h3>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
@@ -183,63 +191,55 @@
 					<img src="images/5.jpg" alt=" " class="img-responsive" />
 				</div>
 				<div class="col-md-6 w3l_stats_bottom_grid_right">
-					<div class='bar_group'>
-						<div class='bar_group__bar thin elastic' label='HTML / CSS Design' value='230'>
-							<div class='w3ls_bar_group__bar_pos'>
-								<p>65%</p>
-							</div>
-						</div>
-						<div class='bar_group__bar thin elastic' label='Graphic Design' value='130'>
-							<div class='w3ls_bar_group__bar_pos'>
-								<p>35%</p>
-							</div>
-						</div>
-						<div class='bar_group__bar thin elastic' label='SEO' value='160'>
-							<div class='w3ls_bar_group__bar_pos'>
-								<p>45%</p>
-							</div>
-						</div>
-						<div class='bar_group__bar thin elastic' label='Wordpress' value='340'>
-							<div class='w3ls_bar_group__bar_pos'>
-								<p>100%</p>
-							</div>
-						</div>
-					</div>
+					Harsha Maheshwari also known as Komet, Director of Happy Hours Dance Place, Begumpet.<br/><br/>
+
+
+She is a trainer in HipHop , Bharatnatyam , Waacking and various other dance forms, Sujok specialist , Zumba Instructor and a Social media influencer ( more than a million views on several videos on YouTube )<br/><br/>
+
+				<ul>
+					<li>Featured in Dance Mogul Magazine, which is a world dance magazine for my contribution in the dance scene.</li><br/>
+
+					<li>Organise national and international dance workshops in the city.</li><br/>
+					<li>Started taking dance to different regions through - The Magical World OF Dance (TMWOD) which is tied up with Make a Difference, Teach For India and some other reputed NGO's.</li><br/>
+					<li>Mentor at Miss Hyderabad and MRS.India Telangana.</li> <br/>
+					<li>Trained with teachers from Japan, Canada , NewYork , L.A , Singapore etc.</li><br/>
+					<li>Given 2 TEDx talks and performances on ‘ art is in everyone ‘ and ‘ Journey through self love ‘ </li><br/>
+					<li>Judged various corporate, college and national level competitions and battles. </li><br/>
+					<li>Active participation and support for the Theatre scene in Hyderabad.</li><br/>
+
+				</ul>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
 		</div>
-	</div>
+	</div><br/><br/>
 <!-- //stats-bottom -->	
 <script src="js/bars.js"></script>
 <!-- footer -->
 	<div class="footer">
 		<div class="container">
-			<h2>Subscribe to <span>Newsletter</span></h2>
-			<form action="#" method="post">
-				<input type="email" name="Email" placeholder="Enter Your Email..." required="">
-				<input type="submit" value="Send">
-			</form>
+			<center><a href="#"><button class="regbtn"><b>Click Here To Subscribe To Newsletter</b></button></a></center>
 			<div class="agile_footer_copy">
 				<div class="w3agile_footer_grids">
 					<div class="col-md-4 w3agile_footer_grid">
 						<h3>About Us</h3>
-						<p>Duis aute irure dolor in reprehenderit in voluptate velit esse.<span>Excepteur sint occaecat cupidatat 
-							non proident, sunt in culpa qui officia deserunt mollit.</span></p>
+						<p> OOB Communities is a network of learning centres which cater to every need of an individual’s education, both academic and practical. 
+ <span>We deliver on our promise of providing the best of instruction, innovation and influence.</span></p>
 					</div>
 					<div class="col-md-4 w3agile_footer_grid">
 						<h3>Contact Info</h3>
 						<ul>
-							<li><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>1234k Avenue, 4th block, <span>New York City.</span></li>
-							<li><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><a href="mailto:info@example.com">info@example.com</a></li>
-							<li><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i>+1234 567 567</li>
+							<li><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>Trimulgherry, <span>Hyderabad</span></li>
+							<li><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><a href="mailto:info@example.com">hello@oobcommunities.com</a></li>
+							<li><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i>+918790752018</li>
 						</ul>
 					</div>
 					<div class="col-md-4 w3agile_footer_grid w3agile_footer_grid1">
 						<h3>Navigation</h3>
 						<ul>
-							<li><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span><a href="courses.html">Courses</a></li>
-							<li><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span><a href="services.html">Services</a></li>							<li><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span><a href="mail.html">Mail Us</a></li>
+							<li><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span><a href="courses.html">Experiment</a></li>
+							<li><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span><a href="services.html">Explore</a></li>
+							<li><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span><a href="mail.html">Contact Us</a></li>
 						</ul>
 					</div>
 					<div class="clearfix"> </div>
@@ -247,13 +247,14 @@
 			</div>
 			<div class="w3_agileits_copy_right_social">
 				<div class="col-md-6 agileits_w3layouts_copy_right">
-					<p>&copy; 2018				</div>
+					<p>&copy; FreeFlo 2018</p>
+				</div>
 				<div class="col-md-6 w3_agile_copy_right">
 					<ul class="agileinfo_social_icons">
 						<li><a href="#" class="w3_agileits_facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 						<li><a href="#" class="wthree_twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-						<li><a href="#" class="agileinfo_google"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-						<li><a href="#" class="agileits_pinterest"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a></li>
+						<li><a href="#" class="agileinfo_google"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+						<li><a href="#" class="agileits_pinterest"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 					</ul>
 				</div>
 				<div class="clearfix"> </div>
