--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>E-</title>
+<title>Oob Communities</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
@@ -19,7 +19,66 @@
 <!-- font-awesome-icons -->
 <link href="css/font-awesome.css" rel="stylesheet"> 
 <!-- //font-awesome-icons -->
-<link href="//fonts.googleapis.com/css?family=Prompt:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&amp;subset=latin-ext,thai,vietnamese" rel="stylesheet"></head>
+<link href="//fonts.googleapis.com/css?family=Prompt:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&amp;subset=latin-ext,thai,vietnamese" rel="stylesheet">
+
+<style>
+.regbtn {
+    background-color: #5398CB;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius:9px;
+}
+
+.regpara {
+    color:#63C8CA;
+}
+
+.custom-types {
+    color:#63C8CA;
+}
+
+.fa {
+  padding: 10px;
+  font-size: 15px;
+  width: 30px;
+  text-align: left;
+  text-decoration: none;
+  border-radius: 50%;
+}
+
+.fa:hover {
+  opacity: 0.7;
+}
+
+.fb {
+  background: #3B5998;
+  color: white;
+}
+
+.tw {
+  background: #55ACEE;
+  color: white;
+}
+
+.li {
+  background: #007bb5;
+  color: white;
+}
+
+.teamresp {
+  border-radius:50%;
+  width:125px;
+  height:125px;
+}
+</style>
+</head>
 	
 <body>
 <!-- banner -->
@@ -32,11 +91,11 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<h1><a class="navbar-brand" href="index.html"><span>E</span>dunet</a></h1>
+				<h1><a class="navbar-brand" href="index.html"><img src="images/logo.png" width="150" height="100"></a></h1>
 			</div>
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
-				<nav class="link-effect-2" id="link-effect-2">
+				<nav>
 					<ul class="nav navbar-nav">
 						<li><a href="index.html"><span data-hover="Home">Home</span></a></li>
 						<li><a href="courses.html"><span data-hover="Courses">Experiment</span></a></li>
@@ -46,7 +105,7 @@
 				</nav>
 			</div>
 			<div class="w3_agile_phone">
-				<p><i class="fa fa-phone" aria-hidden="true"></i>+919666497116</p>
+				<p><i class="fa fa-phone" aria-hidden="true"></i>+918790752018</p>
 			</div>
 		</nav>
 		<div class="container">
@@ -66,17 +125,15 @@
 			</div>
 			<div class="w3_agile_social_icons">
 				<ul class="agileinfo_social_icons">
-					<li><a href="#" class="w3_agileits_facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-					<li><a href="#" class="wthree_twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-					<li><a href="#" class="agileinfo_google"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+					<li><a href="https://www.facebook.com/oobcommunities/" class="w3_agileits_facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+					<li><a href="https://twitter.com/oobcommunities1" class="wthree_twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+					<li><a href="https://www.instagram.com/oobcommunities/" class="agileinfo_google"><i class="fa ins fa-instagram" aria-hidden="true"></i></a></li>
 				</ul>
 			</div>
 			<div class="w3_banner_color">
 				<span></span>
 			</div>
-			<div class="w3_scroll_arrow">
-			  <a href="#team" class="scroll scroll-down"><span class="dot"> </span></a>
-			</div>
+			
 		</div>
 	</div>
 <!-- //banner -->	
@@ -85,8 +142,6 @@
 		<div class="container">
 			<div class="col-md-6 w3ls_banner_bottom_left">
 				<div class="w3ls_banner_bottom_left1">
-					<p>01</p>
-					<span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span>
 				</div>
 				<div class="w3ls_banner_bottom_right1">
 					<h2>the whole purpose of <span>education</span> is to turn mirrors into windows</h2>
@@ -151,17 +206,10 @@
 	<div class="register">
 		<div class="container">
 			<div class="col-md-6 w3layouts_register_right">
-				<form action="#" method="post">	
-					<input name="Name" placeholder="First Name" type="text" required="">
-					<input name="Name" placeholder="Last Name" type="text" required="">
-					<input name="Email" placeholder="Email" type="email" required="">
-					<input name="Subject" placeholder="Subject" type="text" required="">
-					<input type="submit" value="Send">
-				</form>
+				<center><a href="#"><button class="regbtn"><b>Register Here</b></button></a></center>
 			</div>
-			<div class="col-md-6 w3layouts_register_left">
-				<h3><span>Register</span> now</h3>
-				<p>To be a part of a journey of learning, exploration, and most importantly fun!</p>
+			<div>
+				<h3 class="regpara">To be a part of a journey of learning, exploration, and most importantly fun!</h3>
 			</div>
 			<div class="clearfix"> </div>
 		</div>
@@ -246,12 +294,9 @@
 		<div class="container">
 			<div class="w3_agile_team_grid">
 				<div class="w3_agile_team_grid_left">
-					<p>05</p>
-					<span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span>
 				</div>
 				<div class="w3_agile_team_grid_right">
-					<h3>What Our <span>Students</span> Says</h3>
-					<p>Our tales of success</p>
+					<h3>Our <span class="custom-types">Team</span></h3>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
@@ -259,35 +304,91 @@
 				 <section class="center slider">
 						<div class="agileits_testimonial_grid">
 							<div class="w3l_testimonial_grid">
-								<p>In eu auctor felis, id eleifend dolor. Integer bibendum dictum erat, 
-									non laoreet dolor.</p>
-								<h4>Rosy Crisp</h4>
-								<h5>Student</h5>
 								<div class="w3l_testimonial_grid_pos">
-									<img src="images/1.png" alt=" " class="img-responsive" />
-								</div>
+									<img src="images/Venkata Atreya Sai.jpg" alt=" " class="teamresp" />
+								</div><br><br><br>
+								<a href="#" class="fa fb fa-facebook"></a>
+								<a href="#" class="fa tw fa-twitter"></a>
+								<a href="#" class="fa li fa-linkedin"></a>
+								<h4>P Venkata Atreya Sai</h4>
+								
 							</div>
 						</div>
 						<div class="agileits_testimonial_grid">
 							<div class="w3l_testimonial_grid">
-								<p>In eu auctor felis, id eleifend dolor. Integer bibendum dictum erat, 
-									non laoreet dolor.</p>
-								<h4>Laura Paul</h4>
-								<h5>Student</h5>
 								<div class="w3l_testimonial_grid_pos">
-									<img src="images/2.png" alt=" " class="img-responsive" />
-								</div>
+									<img src="images/Firoz Alam.jpg" alt=" " class="teamresp" />
+								</div><br><br><br>
+								<a href="#" class="fa fb fa-facebook"></a>
+								<a href="#" class="fa tw fa-twitter"></a>
+								<a href="#" class="fa li fa-linkedin"></a>
+								<h4>Firoz Alam</h4>
 							</div>
 						</div>
 						<div class="agileits_testimonial_grid">
 							<div class="w3l_testimonial_grid">
-								<p>In eu auctor felis, id eleifend dolor. Integer bibendum dictum erat, 
-									non laoreet dolor.</p>
-								<h4>Michael Doe</h4>
-								<h5>Student</h5>
 								<div class="w3l_testimonial_grid_pos">
-									<img src="images/3.png" alt=" " class="img-responsive" />
-								</div>
+									<img src="images/Harsh Radia.jpg" alt=" " class="teamresp" />
+								</div><br><br><br>
+								<a href="#" class="fa fb fa-facebook"></a>
+								<a href="#" class="fa tw fa-twitter"></a>
+								<a href="#" class="fa li fa-linkedin"></a>
+								<h4>Harsh Tushar Radia</h4>
+							</div>
+						</div>
+						<div class="agileits_testimonial_grid">
+							<div class="w3l_testimonial_grid">
+								<div class="w3l_testimonial_grid_pos">
+									<img src="images/Siri Mandali.jpg" alt=" " class="teamresp" />
+								</div><br><br><br>
+								<a href="#" class="fa fb fa-facebook"></a>
+								<a href="#" class="fa tw fa-twitter"></a>
+								<a href="#" class="fa li fa-linkedin"></a>
+								<h4>Siri Mandali</h4>
+							</div>
+						</div>
+						<div class="agileits_testimonial_grid">
+							<div class="w3l_testimonial_grid">
+								<div class="w3l_testimonial_grid_pos">
+									<img src="images/Vishnu Teja.jpg" alt=" " class="teamresp" />
+								</div><br><br><br>
+								<a href="#" class="fa fb fa-facebook"></a>
+								<a href="#" class="fa tw fa-twitter"></a>
+								<a href="#" class="fa li fa-linkedin"></a>
+								<h4>K.M. Vishnu Teja</h4>
+							</div>
+						</div>
+						<div class="agileits_testimonial_grid">
+							<div class="w3l_testimonial_grid">
+								<div class="w3l_testimonial_grid_pos">
+									<img src="images/Aman Sharma.jpg" alt=" " class="teamresp" />
+								</div><br><br><br>
+								<a href="#" class="fa fb fa-facebook"></a>
+								<a href="#" class="fa tw fa-twitter"></a>
+								<a href="#" class="fa li fa-linkedin"></a>
+								<h4>Aman Kumar Sharma</h4>
+							</div>
+						</div>
+						<div class="agileits_testimonial_grid">
+							<div class="w3l_testimonial_grid">
+								<div class="w3l_testimonial_grid_pos">
+									<img src="images/Sweety Singh.jpg" alt=" " class="teamresp" />
+								</div><br><br><br>
+								<a href="#" class="fa fb fa-facebook"></a>
+								<a href="#" class="fa tw fa-twitter"></a>
+								<a href="#" class="fa li fa-linkedin"></a>
+								<h4>Sweety Singh</h4>
+							</div>
+						</div>
+						<div class="agileits_testimonial_grid">
+							<div class="w3l_testimonial_grid">
+								<div class="w3l_testimonial_grid_pos">
+									<img src="images/Manvi Kansal.jpg" alt=" " class="teamresp" />
+								</div><br><br><br>
+								<a href="#" class="fa fb fa-facebook"></a>
+								<a href="#" class="fa tw fa-twitter"></a>
+								<a href="#" class="fa li fa-linkedin"></a>
+								<h4>Manvi Kansal</h4>
 							</div>
 						</div>
 				</section>
@@ -298,11 +399,7 @@
 <!-- footer -->
 	<div class="footer">
 		<div class="container">
-			<h2>Subscribe to <span>Newsletter</span></h2>
-			<form action="#" method="post">
-				<input type="email" name="Email" placeholder="Enter Your Email..." required="">
-				<input type="submit" value="Send">
-			</form>
+			<center><a href="#"><button class="regbtn"><b>Click Here To Subscribe To Newsletter</b></button></a></center>
 			<div class="agile_footer_copy">
 				<div class="w3agile_footer_grids">
 					<div class="col-md-4 w3agile_footer_grid">
@@ -313,9 +410,9 @@
 					<div class="col-md-4 w3agile_footer_grid">
 						<h3>Contact Info</h3>
 						<ul>
-							<li><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>Greenfield colony, Dairy Farm road, <span>Trimulgherry</span></li>
+							<li><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>Trimulgherry, <span>Hyderabad</span></li>
 							<li><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><a href="mailto:info@example.com">hello@oobcommunities.com</a></li>
-							<li><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i>+919666497116</li>
+							<li><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i>+918790752018</li>
 						</ul>
 					</div>
 					<div class="col-md-4 w3agile_footer_grid w3agile_footer_grid1">
@@ -337,8 +434,8 @@
 					<ul class="agileinfo_social_icons">
 						<li><a href="#" class="w3_agileits_facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 						<li><a href="#" class="wthree_twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-						<li><a href="#" class="agileinfo_google"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-						<li><a href="#" class="agileits_pinterest"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a></li>
+						<li><a href="#" class="agileinfo_google"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+						<li><a href="#" class="agileits_pinterest"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 					</ul>
 				</div>
 				<div class="clearfix"> </div>
