--- a/services.html
+++ b/services.html
@@ -52,7 +52,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<h1><a class="navbar-brand" href="index.html"><span>E</span>dunet</a></h1>
+				<h1><a class="navbar-brand" href="index.html"><img src="images/logo.png" width="150" height="100"></a></h1>
 			</div>
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
@@ -170,17 +170,17 @@ Explore our bewildering variety of fun activities to spice up your learning.
 	</div>
 <!-- //services -->
 <!-- services-bottom -->
-	<div class="services-bottom">
+<!---	<div class="services-bottom">
 		<div class="container"> 
 			<div class="agileits_services_bottom_grid">
 				<h3>the great aim of <span>education</span> is not knowledge but action</h3>
 				<p>Nullam laoreet vestibulum condimentum. Cras elit nisl, consequat sed sollicitudin ac faucibus, cursus vitae nisl.</p>
 			</div>
 		</div>
-	</div>
+	</div>-->
 <!-- //services-bottom -->
 <!-- services1 -->
-	<div class="courses">
+<!--	<div class="courses">
 		<div class="container"> 	
 			<div class="w3_agile_team_grid">
 				<div class="w3_agile_team_grid_left">
@@ -240,7 +240,7 @@ Explore our bewildering variety of fun activities to spice up your learning.
 				<div class="clearfix"> </div>
 			</div>
 		</div>
-	</div>
+	</div>-->
 <!-- //services1 -->
 <!-- bootstrap-pop-up -->
 	<div class="modal video-modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModal">
@@ -270,31 +270,28 @@ Explore our bewildering variety of fun activities to spice up your learning.
 <!-- footer -->
 	<div class="footer">
 		<div class="container">
-			<h2>Subscribe to <span>Newsletter</span></h2>
-			<form action="#" method="post">
-				<input type="email" name="Email" placeholder="Enter Your Email..." required="">
-				<input type="submit" value="Send">
-			</form>
+			<center><a href="#"><button class="regbtn"><b>Click Here To Subscribe To Newsletter</b></button></a></center>
 			<div class="agile_footer_copy">
 				<div class="w3agile_footer_grids">
 					<div class="col-md-4 w3agile_footer_grid">
 						<h3>About Us</h3>
-						<p>Duis aute irure dolor in reprehenderit in voluptate velit esse.<span>Excepteur sint occaecat cupidatat 
-							non proident, sunt in culpa qui officia deserunt mollit.</span></p>
+						<p> OOB Communities is a network of learning centres which cater to every need of an individual’s education, both academic and practical. 
+ <span>We deliver on our promise of providing the best of instruction, innovation and influence.</span></p>
 					</div>
 					<div class="col-md-4 w3agile_footer_grid">
 						<h3>Contact Info</h3>
 						<ul>
-							<li><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>1234k Avenue, 4th block, <span>New York City.</span></li>
-							<li><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><a href="mailto:info@example.com">info@example.com</a></li>
-							<li><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i>+1234 567 567</li>
+							<li><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>Trimulgherry, <span>Hyderabad</span></li>
+							<li><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><a href="mailto:info@example.com">hello@oobcommunities.com</a></li>
+							<li><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i>+918790752018</li>
 						</ul>
 					</div>
 					<div class="col-md-4 w3agile_footer_grid w3agile_footer_grid1">
 						<h3>Navigation</h3>
 						<ul>
-							<li><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span><a href="courses.html">Courses</a></li>
-							<li><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span><a href="services.html">Services</a></li>							<li><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span><a href="mail.html">Mail Us</a></li>
+							<li><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span><a href="courses.html">Experiment</a></li>
+							<li><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span><a href="services.html">Explore</a></li>
+							<li><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span><a href="mail.html">Contact Us</a></li>
 						</ul>
 					</div>
 					<div class="clearfix"> </div>
@@ -302,14 +299,14 @@ Explore our bewildering variety of fun activities to spice up your learning.
 			</div>
 			<div class="w3_agileits_copy_right_social">
 				<div class="col-md-6 agileits_w3layouts_copy_right">
-					<p>&copy;</a></p>
+					<p>&copy; FreeFlo 2018</p>
 				</div>
 				<div class="col-md-6 w3_agile_copy_right">
 					<ul class="agileinfo_social_icons">
 						<li><a href="#" class="w3_agileits_facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 						<li><a href="#" class="wthree_twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-						<li><a href="#" class="agileinfo_google"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-						<li><a href="#" class="agileits_pinterest"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a></li>
+						<li><a href="#" class="agileinfo_google"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+						<li><a href="#" class="agileits_pinterest"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 					</ul>
 				</div>
 				<div class="clearfix"> </div>
