--- a/mail.html
+++ b/mail.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Edunet</title>
+<title>Oob Communities</title>
 <!-- custom-theme -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -18,7 +18,29 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- font-awesome-icons -->
 <link href="css/font-awesome.css" rel="stylesheet"> 
 <!-- //font-awesome-icons -->
-<link href="//fonts.googleapis.com/css?family=Prompt:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&amp;subset=latin-ext,thai,vietnamese" rel="stylesheet"></head>
+<link href="//fonts.googleapis.com/css?family=Prompt:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&amp;subset=latin-ext,thai,vietnamese" rel="stylesheet">
+
+<link rel="stylesheet" href="css/flexslider.css" type="text/css" media="screen" property="" />
+<style>
+.regbtn {
+    background-color: #5398CB;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius:9px;
+}
+
+.regpara {
+    color:#63C8CA;
+}
+</style>
+</head>
 	
 <body>
 <!-- banner -->
@@ -31,69 +53,37 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<h1><a class="navbar-brand" href="index.html"><span>E</span>dunet</a></h1>
+				<h1><a class="navbar-brand" href="index.html"><img src="images/logo.png" width="150" height="100"></a></h1>
 			</div>
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
-				<nav class="link-effect-2" id="link-effect-2">
+				<nav>
 					<ul class="nav navbar-nav">
 						<li><a href="index.html"><span data-hover="Home">Home</span></a></li>
-						<li><a href="courses.html"><span data-hover="Courses">Courses</span></a></li>
-						<li><a href="services.html"><span data-hover="Services">Services</span></a></li>s
-						<li><a href="mail.html"><span data-hover="Mail Us">Mail Us</span></a></li>
+						<li><a href="courses.html"><span data-hover="Courses">Experiment</span></a></li>
+						<li><a href="services.html"><span data-hover="Services">Explore</span></a></li>
+						<li><a href="mail.html"><span data-hover="Mail Us">Contact Us</span></a></li>
 					</ul>
 				</nav>
 			</div>
 			<div class="w3_agile_phone">
-				<p><i class="fa fa-phone" aria-hidden="true"></i> +123 234 233</p>
+				<p><i class="fa fa-phone" aria-hidden="true"></i>+918790752018</p>
 			</div>
 		</nav>
-		<div class="wthree_banner1_info">
-			<div class="container">
-				<h3><span>Mail</span> Us</h3>
-			</div>
-		</div>
 	</div>
 <!-- //banner -->	
 <!-- mail -->
 	<div class="courses">
 		<div class="container">
 			<div class="w3_agile_team_grid">
-				<div class="w3_agile_team_grid_left">
-					<p>01</p>
-					<span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span>
-				</div>
 				<div class="w3_agile_team_grid_right">
 					<h3>Get in <span>touch</span> with us</h3>
-					<p>Aliquam sit amet sapien felis. Proin vel dolor sed risus maximus gravida. 
-						Ut suscipit orci sem, eget lobortis sem dictum eu. Etiam congue ex sed volutpat fringilla.</p>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
 			<div class="agileits_w3layouts_team_grids agileits_mail_grids">
 				<div class="col-md-6 agileinfo_mail_grid_left">
-					<form action="#" method="post">
-						<span class="input input--nariko">
-							<input class="input__field input__field--nariko" name="Name" type="text" id="input-20" placeholder=" " required="" />
-							<label class="input__label input__label--nariko" for="input-20">
-								<span class="input__label-content input__label-content--nariko">Your Name</span>
-							</label>
-						</span>
-						<span class="input input--nariko">
-							<input class="input__field input__field--nariko" name="Email" type="email" id="input-21" placeholder=" " required="" />
-							<label class="input__label input__label--nariko" for="input-21">
-								<span class="input__label-content input__label-content--nariko">Your Email</span>
-							</label>
-						</span>
-						<span class="input input--nariko">
-							<input class="input__field input__field--nariko" name="Subject" type="text" id="input-22" placeholder=" " required="" />
-							<label class="input__label input__label--nariko" for="input-22">
-								<span class="input__label-content input__label-content--nariko">Your Subject</span>
-							</label>
-						</span>
-						<textarea name="Message" placeholder="Your message here..." required=""></textarea>
-						<input type="submit" value="Send">
-					</form>
+					<center><a href="#"><button class="regbtn"><b>Click Here To Register</b></button></a></center>
 				</div>
 				<div class="col-md-6 agileinfo_mail_grid_right">
 					<div class="agileinfo_mail_social_right">
@@ -126,53 +116,38 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 						<div class="clearfix"> </div>
 					</div>
-					<div class="agileinfo_mail_social_right">
-						<div class="agileinfo_mail_social_right_social">
-							<a href="#" class="w3_contact_rss">
-								<i class="fa fa-rss"></i>
-								<p>RSS</p>
-							</a>
-						</div>
-					</div>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
 		</div>
 	</div>
-	<div class="agile_map">
-		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3950.3905851087434!2d-34.90500565012194!3d-8.061582082752993!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ab18d90992e4ab%3A0x8e83c4afabe39a3a!2sSport+Club+Do+Recife!5e0!3m2!1sen!2sin!4v1478684415917" style="border:0"></iframe>
-	</div>
+	
 <!-- //mail -->
 <!-- footer -->
-	<div class="footer">
+		<div class="footer">
 		<div class="container">
-			<h2>Subscribe to <span>Newsletter</span></h2>
-			<form action="#" method="post">
-				<input type="email" name="Email" placeholder="Enter Your Email..." required="">
-				<input type="submit" value="Send">
-			</form>
+			<center><a href="#"><button class="regbtn"><b>Click Here To Subscribe To Newsletter</b></button></a></center>
 			<div class="agile_footer_copy">
 				<div class="w3agile_footer_grids">
 					<div class="col-md-4 w3agile_footer_grid">
 						<h3>About Us</h3>
-						<p>Duis aute irure dolor in reprehenderit in voluptate velit esse.<span>Excepteur sint occaecat cupidatat 
-							non proident, sunt in culpa qui officia deserunt mollit.</span></p>
+						<p> OOB Communities is a network of learning centres which cater to every need of an individual’s education, both academic and practical. 
+ <span>We deliver on our promise of providing the best of instruction, innovation and influence.</span></p>
 					</div>
 					<div class="col-md-4 w3agile_footer_grid">
 						<h3>Contact Info</h3>
 						<ul>
-							<li><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>1234k Avenue, 4th block, <span>New York City.</span></li>
-							<li><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><a href="mailto:info@example.com">info@example.com</a></li>
-							<li><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i>+1234 567 567</li>
+							<li><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>Trimulgherry, <span>Hyderabad</span></li>
+							<li><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><a href="mailto:info@example.com">hello@oobcommunities.com</a></li>
+							<li><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i>+918790752018</li>
 						</ul>
 					</div>
 					<div class="col-md-4 w3agile_footer_grid w3agile_footer_grid1">
 						<h3>Navigation</h3>
 						<ul>
-							<li><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span><a href="courses.html">Courses</a></li>
-							<li><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span><a href="services.html">Services</a></li>
-							<li><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span><a href="icons.html">Web Icons</a></li>
-							<li><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span><a href="mail.html">Mail Us</a></li>
+							<li><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span><a href="courses.html">Experiment</a></li>
+							<li><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span><a href="services.html">Explore</a></li>
+							<li><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span><a href="mail.html">Contact Us</a></li>
 						</ul>
 					</div>
 					<div class="clearfix"> </div>
@@ -180,13 +155,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 			<div class="w3_agileits_copy_right_social">
 				<div class="col-md-6 agileits_w3layouts_copy_right">
-					<p>&copy; 2018				</div>
+					<p>&copy; FreeFlo 2018</p>
+				</div>
 				<div class="col-md-6 w3_agile_copy_right">
 					<ul class="agileinfo_social_icons">
 						<li><a href="#" class="w3_agileits_facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 						<li><a href="#" class="wthree_twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-						<li><a href="#" class="agileinfo_google"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-						<li><a href="#" class="agileits_pinterest"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a></li>
+						<li><a href="#" class="agileinfo_google"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+						<li><a href="#" class="agileits_pinterest"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 					</ul>
 				</div>
 				<div class="clearfix"> </div>
