--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 	<div class="register">
 		<div class="container">
 			<div class="col-md-6 w3layouts_register_right">
-				<center><a href="#"><button class="regbtn"><b>Register Here</b></button></a></center>
+				<center><a href="https://docs.google.com/forms/d/e/1FAIpQLSch55vzyVsbuuKLganHWI2zdpNO8uEVKPOp0RWSUFlz9sxHmg/viewform"><button class="regbtn"><b>Register Here</b></button></a></center>
 			</div>
 			<div>
 				<h3 class="regpara">To be a part of a journey of learning, exploration, and most importantly fun!</h3>
@@ -399,7 +399,7 @@
 <!-- footer -->
 	<div class="footer">
 		<div class="container">
-			<center><a href="#"><button class="regbtn"><b>Click Here To Subscribe To Newsletter</b></button></a></center>
+			<center><a href="https://docs.google.com/forms/d/e/1FAIpQLSdewmPRBx2pvMquuw7T2l1SxeeulJHzXemzyBOQ3TROpPftrA/viewform"><button class="regbtn"><b>Click Here To Subscribe To Newsletter</b></button></a></center>
 			<div class="agile_footer_copy">
 				<div class="w3agile_footer_grids">
 					<div class="col-md-4 w3agile_footer_grid">
