added link to google form

--- a/mail.html
+++ b/mail.html
@@ -83,7 +83,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 			<div class="agileits_w3layouts_team_grids agileits_mail_grids">
 				<div class="col-md-6 agileinfo_mail_grid_left">
-					<center><a href="#"><button class="regbtn"><b>Click Here To Register</b></button></a></center>
+					<center><a href="https://docs.google.com/forms/d/e/1FAIpQLSch55vzyVsbuuKLganHWI2zdpNO8uEVKPOp0RWSUFlz9sxHmg/viewform"><button class="regbtn"><b>Click Here To Register</b></button></a></center>
 				</div>
 				<div class="col-md-6 agileinfo_mail_grid_right">
 					<div class="agileinfo_mail_social_right">
@@ -126,7 +126,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- footer -->
 		<div class="footer">
 		<div class="container">
-			<center><a href="#"><button class="regbtn"><b>Click Here To Subscribe To Newsletter</b></button></a></center>
+			<center><a href="https://docs.google.com/forms/d/e/1FAIpQLSdewmPRBx2pvMquuw7T2l1SxeeulJHzXemzyBOQ3TROpPftrA/viewform"><button class="regbtn"><b>Click Here To Subscribe To Newsletter</b></button></a></center>
 			<div class="agile_footer_copy">
 				<div class="w3agile_footer_grids">
 					<div class="col-md-4 w3agile_footer_grid">
