--- a/services.html
+++ b/services.html
@@ -270,7 +270,7 @@ Explore our bewildering variety of fun activities to spice up your learning.
 <!-- footer -->
 	<div class="footer">
 		<div class="container">
-			<center><a href="#"><button class="regbtn"><b>Click Here To Subscribe To Newsletter</b></button></a></center>
+			<center><a href="https://docs.google.com/forms/d/e/1FAIpQLSdewmPRBx2pvMquuw7T2l1SxeeulJHzXemzyBOQ3TROpPftrA/viewform"><button class="regbtn"><b>Click Here To Subscribe To Newsletter</b></button></a></center>
 			<div class="agile_footer_copy">
 				<div class="w3agile_footer_grids">
 					<div class="col-md-4 w3agile_footer_grid">
